Fix calendar flickering issue, fix bug when using searchbar in nav on search page, where it wouldn't update map, now added componentWillUpdate for spot_search, instead of all in constructor

--- a/app/assets/stylesheets/base/nav.scss
+++ b/app/assets/stylesheets/base/nav.scss
@@ -16,7 +16,7 @@
 // MAIN NAV LEFT
 
 .main-nav-left {
-  width: 10%;
+  width: 8%;
   display: flex;
   padding: 2px;
   justify-content: flex-start;
@@ -36,7 +36,7 @@
 // MAIN NAV CENTER
 
 .main-nav-center {
-  width: 50%;
+  width: 60%;
 }
 
 // MAIN NAV RIGHT
@@ -45,7 +45,7 @@
   padding: 2px;
   display: flex;
   justify-content: flex-end;
-  width: 40%;
+  width: 32%;
 }
 
 
